demo1/configmap-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-volume-pod
spec:
  volumes:
    - name: configmap-volume
      configMap:
        name: game-config
  containers:
    - name: busybox
      image: busybox
      command: [ "/bin/sh", "-c", "cat /etc/config/game.properties /etc/config/ui.properties" ]
      volumeMounts:
      - name: configmap-volume
        mountPath: /etc/config
  restartPolicy: Never
