demo1/limit-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-example
spec:
  nodeName: 172.16.8.40
  containers:
  - name: web
    imagePullPolicy: IfNotPresent
    image: nginx:1.17.0-alpine
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
  restartPolicy: Always
