demo1/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
#      imagePullSecrets: 
#        - myregistrykey
      restartPolicy: Always
      nodeSelector:
        env_role: dev
      containers:
      - name: nginx
        imagePullPolicy: IfNotPresent
        image: nginx:1.17.0-alpine
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
