demo1/secret-var.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-env-pod
spec:
  containers:
  - name: nginx
    image: nginx:1.17.0-alpine
